--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: stanleyjia101@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Making natural skincare and beauty products affordable.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://broadcube.com" # the base hostname & protocol for your site
+url: "stanleyjia.github.io" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
